...
                onValueChange = {
                    query = it
                    onQueryChanged(it)
                },
                modifier = Modifier
                    .weight(1f)
                    .testTag("qa-global-search-input"),
                placeholder = { Text(context.t("roomlist_searchplaceholder"), color = colors.auxiliaryText) },
                singleLine = true,
            )
            if (query.isNotEmpty()) {
                Text(
                    "×",
...
