...
    <string name="meeting_editperiodictitle">Edit recurring meeting</string>
    <string name="meeting_editthisoccurrence">Edit this occurrence</string>
    <string name="meeting_editthisoccurrencetitle">Edit this occurrence</string>
    <string name="meeting_edittitle">Edit meeting</string>
    <string name="meeting_endbeforestart">End time must be after start time</string>
    <string name="meeting_endtime">End time</string>
    <string name="meeting_end_confirm">OK</string>
    <string name="meeting_end_host_title">You have been removed from the meeting</string>
    <string name="meeting_end_meeting_ended_title">The meeting has ended</string>
    <string name="meeting_end_remote_login_title">Joined on another device; this end has exited</string>
    <string name="meeting_end_self_title">You have left the meeting</string>
    <string name="meeting_end_voice_first">End the current voice call first</string>
    <string name="meeting_error_not_logged_in">Not logged in: cannot access meeting service</string>
...
